fix the overflow problem in the main page

--- a/src/scss/slider.css
+++ b/src/scss/slider.css
@@ -5,7 +5,7 @@
   width: 100%;
   position: relative;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .swiper-slide {
@@ -14,6 +14,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .swiper-slide img {
